--- a/Habit-Tracker/src/Components/sidebar.css
+++ b/Habit-Tracker/src/Components/sidebar.css
@@ -109,10 +109,12 @@
     height: auto;
     position: relative; 
     padding: 10px;
+    margin-bottom: 40px;
+    border-radius: 5px;
   }
 
   .sidebar h2 {
-    font-size: 16px;
+
     text-align: center;
   }
 
@@ -124,7 +126,7 @@
   }
 
   .sidebar ul li {
-    font-size: 12px;
+  
     margin: 10px;
     padding: 5px 10px;
   }
