--- a/Habit-Tracker/src/Pages/WelcomePage.css
+++ b/Habit-Tracker/src/Pages/WelcomePage.css
@@ -65,3 +65,9 @@
     transform: scale(1.05); 
   }
   
+  @media screen and (max-width:480px){
+    .welcome-container{
+      width: 70%;
+    }
+    
+  }
